--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Ignore node_modules in frontend
 frontend/node_modules/
 
-frontend/node_modules/
+# Ignore environment files
 *.env
 frontend/.env
 backend/.env
